--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "html_changes",
+  "name": "html-differences",
   "version": "1.0.0",
-  "description": "A simple package to detect changes in different html, include add and delete",
+  "description": "A simple package to detect changes in different html, using xpath",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,6 @@
   "author": "william_an2000",
   "license": "MIT",
   "dependencies": {
-    "parse5": "^3.0.2",
     "simple-xpath-position": "^2.0.2",
     "xmldom": "^0.1.27",
     "xpath.js": "^1.0.7"
