--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-differences",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple package to detect changes in different html, using xpath",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,8 @@
     "xmldom": "^0.1.27",
     "xpath.js": "^1.0.7"
   },
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/William-An/HTML-Differences.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/William-An/HTML-Differences.git"
   }
 }
